correction z-index

--- a/canvas/style.css
+++ b/canvas/style.css
@@ -8,7 +8,7 @@ canvas {
   background-image: url(https://gftnth00.mywhc.ca/tim14/wp-content/uploads/2024/11/sansEau_ileRendu_10nov.png);
   margin: 0;
   padding: 0;
-  z-index: -1;
+  z-index: 2;
   -webkit-user-drag: none;
   user-select: none;
   -moz-user-select: none;
